@@ -1,3 +1,9 @@
+BOARD18 1.1.4 Release Notes
+
+Changes from 1.1.3 Release:
+
+* Implemented issue 27 Phase 2 - board18Players.php.
+
 BOARD18 1.1.3 Release Notes
 
 Changes from 1.1.2 Release:
